[gd_scene load_steps=2 format=2]

[ext_resource path="res://Prompt.gd" type="Script" id=1]

[node name="Prompt" type="HBoxContainer"]
margin_right = 194.0
margin_bottom = 38.0
size_flags_vertical = 7
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PromptName" type="Label" parent="."]
margin_right = 152.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Drift"
align = 2
valign = 1

[node name="PromptGlyphXbox" type="TextureRect" parent="."]
margin_left = 156.0
margin_right = 194.0
margin_bottom = 38.0
rect_min_size = Vector2( 38, 38 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PromptGlyphPC" type="TextureRect" parent="."]
visible = false
margin_left = 198.0
margin_right = 236.0
margin_bottom = 38.0
rect_min_size = Vector2( 38, 38 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}
